--- a/en/speare.html
+++ b/en/speare.html
@@ -134,6 +134,8 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 <li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. But Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
 </li></ol></p>
 
+<p class="dark">Don't have a bias for a software because of its region, no child can choose its parents.</p>
+
 
 <div style="display:none;">
 <h2>About Apple App Store</h2>
