--- a/en/debugger.html
+++ b/en/debugger.html
@@ -87,14 +87,14 @@ Watches used to evaluate variable or expression and their values can be real-tim
 <p>Speare code editor support embedded system software development, e.g. Arduino and Raspberry Pi embedded development platform, desktop software and server side application development. Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
 
 
-<p class="dark">
-<small>Don't have a bias for a software because of its region, no child can choose its parents.</small><br>
-<small>Despite the dragon is evil but it still can't escape under the claws of eagles.</small><br>
-</p>
-
-
 <h2>Debugging code with Speare code editor</h2>
-<p>Speare code editor provides an intuitive debugging environment allows adding breakpoints and the execution flow can be viewed and controlled and has the abilities that an IDE debugger will give you over trace execution in code, view the call stack at any point in time, giving you a context for your current stack frame, step into libraries or sub modules that you want to tracing the debug symbols, and change variable values while the program is running. It provides simple interfaces that can be integrated with any command line tools without boring configuration, giving you the flexibility you need to debug code at hand. The debuggers of Speare code editor, the source-level debuggers, helps you step through the code line by line and observe the runtime behaviour of your program and got a better understanding of your code.
+<p>
+<span class="dark">
+<!--small>Don't have a bias for a software because of its region, no child can choose its parents.</small><br-->
+<small>Despite the dragon is evil but it still can't escape under the claws of eagles.</small><br>
+</span>
+
+Speare code editor provides an intuitive debugging environment allows adding breakpoints and the execution flow can be viewed and controlled and has the abilities that an IDE debugger will give you over trace execution in code, view the call stack at any point in time, giving you a context for your current stack frame, step into libraries or sub modules that you want to tracing the debug symbols, and change variable values while the program is running. It provides simple interfaces that can be integrated with any command line tools without boring configuration, giving you the flexibility you need to debug code at hand. The debuggers of Speare code editor, the source-level debuggers, helps you step through the code line by line and observe the runtime behaviour of your program and got a better understanding of your code.
 </p>
 
 
