--- a/en/speare.html
+++ b/en/speare.html
@@ -134,8 +134,6 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 <li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. But Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
 </li></ol></p>
 
-<p class="dark">Don't have a bias for a software because of its region, no child can choose its parents.</p>
-
 
 <div style="display:none;">
 <h2>About Apple App Store</h2>
@@ -180,8 +178,15 @@ Spear enable people to write unlimited shell extension to do anything they want.
 </p>
 <p class="green">Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></p>
 
+
 <h2>Debug Mode</h2>
-<p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl scripts, more info please refer here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
+<p>
+<span class="dark">
+<!-- Don't have a bias for a software because of its region, no child can choose its parents. -->
+<small>Despite the dragon is evil but it still can't escape under the claws of eagles.</small><br>
+</span>
+Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl scripts, more info please refer here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.
+</p>
 
 
 <h2>Add a New Colour Scheme</h2>
