--- a/en/debugger.html
+++ b/en/debugger.html
@@ -46,9 +46,10 @@ The ultra light code editor.
     </div>
 
 <h2 class="dark">What's new</h2>
-<p><span class="dark">Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 6 and later, all kinds of Java application development.</span>  →  <a href="http://www.sevenuc.com/download/Small_IDE_for_Java_development.pdf" target="_blank">Small_IDE_for_Java_development.pdf</a>.<br>
+<p><span class="dark">Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 6 and later, all kinds of Java application development.</span> <!--  →  a href="http://www.sevenuc.com/download/Small_IDE_for_Java_development.pdf" target="_blank">Small_IDE_for_Java_development.pdf</a --><br>
 <small> (update: Jul 11 2021)</small>
 </p>
+
 
 <p><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></p>
 
