--- a/403.html
+++ b/403.html
@@ -36,8 +36,9 @@
 </p>
 
 </div> 
-
+</div><!-- container-fluid -->
 	
+
 <footer>
     <div class="row">
         <div class="col-md-6">
@@ -58,8 +59,5 @@
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
