--- a/en/403.html
+++ b/en/403.html
@@ -36,6 +36,7 @@
 </div>
 </section>
 </div>
+</div><!-- container-fluid -->
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
@@ -48,4 +49,5 @@
       <a href="http://www.sevenuc.com/en/contact.html" class="footer-link"> Contact </a></p></span>
  </footer>
 </div>
-</body></html>
+</body>
+</html>
