--- a/en/404.html
+++ b/en/404.html
@@ -41,6 +41,7 @@ The page you're looking for is no longer available.<br>
 </div>
 </section>
 </div>
+</div><!-- container-fluid -->
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
@@ -53,4 +54,5 @@ The page you're looking for is no longer available.<br>
       <a href="http://www.sevenuc.com/en/contact.html" class="footer-link"> Contact </a></p></span>
  </footer>
 </div>
-</body></html>
+</body>
+</html>
