--- a/en/ai.html
+++ b/en/ai.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
 <style type="text/css">
-table, p, pre, li { max-width: 714px; }
+/* table, p, pre, li { max-width: 714px; } */
 </style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
@@ -95,6 +95,8 @@ Options:
     <p><audio autoplay loop preload="none"><source src="http://blog.sevenuc.com/music/chan/qEfRSe.mp3" type="audio/mpeg" /></audio></p>
 
 
+<p><br><br></p>
+</div><!-- container-fluid -->
 
 <footer>
     <div class="row">
@@ -116,8 +118,5 @@ Options:
         </div>
     </div>
 </footer>
-	
-	
-</div><!-- container-fluid -->
 </body>
 </html>
