--- a/en/apps.html
+++ b/en/apps.html
@@ -28,11 +28,11 @@
 
 <div class="container-fluid">
 
-    <div class="jumbotron">
-        <h1>Tool softwares</h1>
-        <p class="lead">Some software developed for macOS and iOS,  they're developed as useful tool or just for demonstration purpose.</p>
-    </div>
-    
+<div class="jumbotron">
+    <h1>Tool softwares</h1>
+    <p class="lead">Some software developed for macOS and iOS,  they're developed as useful tool or just for demonstration purpose.</p>
+</div>
+
 <div class="row block2">
     
 <div class="col-md-4">
@@ -177,7 +177,7 @@
 For example, <a href="guard.html" target="_blank"><b>Guard7</b></a> and <a href="iosfinder.html" target="_blank"><b>iOSFinder</b></a> both are high quality software, but they maliciously attack them, go all out! The more they maliciously attack the apps, the more their bad intention are exposed, and the more affirmation of these apps. 
 </p>
 <br><br>
-
+</div> <!-- container-fluid -->
 
 
 <footer>
