--- a/en/codeeditor.html
+++ b/en/codeeditor.html
@@ -41,9 +41,10 @@
 <p>iCodeEditor has been renamed to iOSFinder. <br>
 Please forward to there: <a href="iosfinder.html"> iosfinder.html</a></p>
 <p><br></p>
-
 </div> 
 
+<p><br><br></p>
+</div><!-- container-fluid -->
 	
 <footer>
     <div class="row">
@@ -65,8 +66,5 @@ Please forward to there: <a href="iosfinder.html"> iosfinder.html</a></p>
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
