--- a/en/contact.html
+++ b/en/contact.html
@@ -29,7 +29,9 @@
 <p><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp; Email: <a href="mailto:info@sevenuc.com">info@sevenuc.com</a></p>
 <p><br><br><br><br></p>
 
-	
+<p><br><br></p>
+</div><!-- container-fluid -->
+
 <footer>
     <div class="row">
         <div class="col-md-6">
@@ -50,8 +52,5 @@
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
