--- a/en/debugger.html
+++ b/en/debugger.html
@@ -35,13 +35,13 @@
  /___/ .__/\__/\_,_/_/  \__/
     /_/
 Speare version 1.2.404
-The ultra light code editor.
+<i>The ultra light code editor.</i>
 (c) 2021 http://www.sevenuc.com
 <small>(Release date: Jul 11 2021)</small>
 </pre></p>
         <h1></h1>
         <p class="lead">
-        <a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.
+        <i><a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</i>
         </p>
     </div>
 
@@ -51,7 +51,7 @@ The ultra light code editor.
 </p>
 
 
-<p><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></p>
+<p><i><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></i></p>
 
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link">
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
@@ -92,18 +92,15 @@ Watches used to evaluate variable or expression and their values can be real-tim
 <p>
 <span class="dark">
 <!--small>Don't have a bias for a software because of its region, no child can choose its parents.</small><br-->
-<small>Despite the dragon is evil but it still can't escape under the claws of eagles.</small><br>
+<small><i>Despite the dragon is evil but it still can't escape under the claws of eagles.</i></small><br>
 </span>
-
 Speare code editor provides an intuitive debugging environment allows adding breakpoints and the execution flow can be viewed and controlled and has the abilities that an IDE debugger will give you over trace execution in code, view the call stack at any point in time, giving you a context for your current stack frame, step into libraries or sub modules that you want to tracing the debug symbols, and change variable values while the program is running. It provides simple interfaces that can be integrated with any command line tools without boring configuration, giving you the flexibility you need to debug code at hand. The debuggers of Speare code editor, the source-level debuggers, helps you step through the code line by line and observe the runtime behaviour of your program and got a better understanding of your code.
 </p>
-
 
 <p>
 <a href="../images/speare/debug_wordpress_in_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_wordpress_in_speare_code_editor.png" class="screenshots"/></a><br>
 Speare code editor is a small PHP IDE that well support all kinds of PHP development, from PHP 5.x to PHP 7.x, framework based on big projects or common command line applications, the above is a screenshot of debugging <a href="https://wordpress.org/" target="_blank">WordPress</a> in Speare code editor.
 </p>
-
 
 <h2>Lua Debugger</h2>
 <p>Speare code editor provides an ultra lightweight debugging environment for C, C++ and <a href="https://www.lua.org/" target="_blank">Lua</a>. As a small but productive Lua IDE, Speare well supports all kinds of Lua development with concise and intuitive user interface, and can seamlessly debug C and C++ modules with Lua code in the same environment. The Lua debugger of Speare supports all common versions of Lua and LuaJIT, and you can directly replace the Lua interpreter with your self-compiled version, the version range includes from 5.1.4 and 5.1.5 to 5.2.4, 5.3.5, 5.3.6, and 5.4.2, the download link is here:<br>
@@ -113,6 +110,7 @@ Speare code editor is a small PHP IDE that well support all kinds of PHP develop
 
 Speare code editor support various game engine and frameworks, such as the LÖVE 2D, Moai open source game engine, the Gideros mobile game platform, the Corona 2D game engine, the Marmalade game engine, the Cocos2d and cocos2d-x game engine, the OpenResty Nginx web server and the Lapis web framework, the high performance Prosody instant message server, the JUCI Webgui for embedded devices, the Torch machine learning framework, and the Redis open source database etc.
 <br><br></p>
+
 
 <h2>Ruby Debugger</h2>
 <p>Speare supports debugging all kinds of Ruby development, mruby/c and mruby, Ruby and Ruby on Rails, please refer this document <a href="http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf" target="_blank">http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf</a>.
@@ -148,11 +146,10 @@ On the contrary, they not only want to recover their cost, they even drag custom
 <h2>About Programming Languages</h2>
 <p>I have used various popular programming languages from DOS era, for small, reliable and strong software:<br><br>
 <span class="green">C is the only choice.</span><br><br>
-C can make strongest software by programmer crafting with patient and willpower. C is far from a perfect language and it really has many flaws, C++ has more, but no replacement. I've tried Nim in its early stage, it's a good idea but the final result is unacceptable, the result turned out to be an interesting but failed attempt, because it produced a lot of garbage when automatically generating C code, that's very annoying, so I throw it away immediately. And I've tried Wren, a small scripting language, sorry, it really can't compare to Lua, so I have to give it up. Haskell is good at programming language parsing, code generating, concurrency and functional programming, concise and grace, but its runtime made it heavy and burdensome, plenty of other programming languages have the same inherent problem too. In short, big runtime is unacceptable, including C++. From my programming experience, Java have more stronger OOP ability than C++, and Objective-C have more stronger OOP ability than Java, Ruby has the extreamly OOP flexbilty in all of them, but there isn't a perfect programming language in the world can help you make a good software without, without long term programming experience. Despite Rust, Go, OC and Swift try to resolve existing issues in C and C++ programming language, but none of them can replace the importance of C and C++, master C programming language and make small software is a real programmer's cultivation.
+C can make strongest software by programmer crafting with patient and willpower. C is far from a perfect language and it really has many flaws, C++ has more, but no replacement. I've tried Nim in its early stage, it's a good idea but the final result is unacceptable, the result turned out to be an interesting but failed attempt, because it produced a lot of garbage when automatically generating C code, that's very annoying, so I throw it away immediately. And I've tried Wren, a small scripting language, sorry, it really can't compare to Lua, so I have to give it up. Haskell is good at programming language parsing, code generating, concurrency and functional programming, concise and grace, but its runtime made it heavy and burdensome, plenty of other programming languages have the same inherent problem too. In short, big runtime is unacceptable, including C++. From my programming experience, Java have more stronger OOP ability than C++, and Objective-C have more stronger OOP ability than Java, Ruby has the extreamly OOP flexbilty in all of them, but there isn't a perfect programming language in the world can help you make a good software without, without long term programming experience. Despite Rust, Go, OC and Swift try to resolve existing issues in C and C++ programming language, but none of them can replace the importance of C and C++. <i>Master C programming language and make small software is a real programmer's cultivation.</i>
 
 <span class="green"> → <a href="speare.html#whysmallsoftware" target="_blank">Why small software.</a></span>
 </p>
-
 
 <a name="whyc"></a><br>
 <h2>About the C programming language</h2>
@@ -177,20 +174,23 @@ C can make strongest software by programmer crafting with patient and willpower.
 <h2>The Tao and Kung Fu of Programming</h2>
 <p><i><b>Why all attempts failed?</b> They want to create new programming language to resolve problem in software industry, but all attempts failed. Rapid development hurt software industry. Any new programming language that intended to achieve a seamless translation from Lisp or Lisp like language, e.g. Javascript, to native executable code will failed at final. The product quality of the software industry is directly proportional to the number of experienced C programming experts, but experienced C developer and C ninja are rare and rare, big monster software more and more, big garbage more and more, they produce garbage based on garbage, because only a few people can persistently walk on the difficult way of C. C is really unsafe and really difficult to master, to be a mature C developer or an C expert, a developer needs about ten years to continually experience it. Programming is difficult, there is no shortcuts for programming, programming language itself can't resolve it. Programming with C++ is not essential, but mast how to OOP with C++ is essential, there's no any other language can replace the importance of it and no any shortcut to bypass OOP with it, master OOP with C++ and then you can better programming in other high-level languages. In other words, better understand C++ then better understand OC and then better understand Swift. Only the honest and continuous improving of the skills of OOP is the reliable way. Only the honest and continuous improving of the skills of C programming is the reliable way.<br><br>
 <span class="green">"C + elegant scripting language" is the reliable, efficient and flexible extending solution.</span><br><br>
-If you can't write quality C code, that means you're not a real programmer. Most developer have never written a real C software in their life, I wish more and more developer use Speare code editor to develop efficient and excellent software with C instead of current popular bloated programming languages. Small software with strong bone!</i><br><br>
+<i>If you can't write quality C code, that means you're not a real programmer.</i> Most developer have never written a real C software in their life, I wish more and more developer use Speare code editor to develop efficient and excellent software with C instead of current popular bloated programming languages. Small software with strong bone!</i><br><br>
 </p>
 
 
 <p><!--lt>Emphasise small software is never too much!<lt><br-->
-<lt>Crafting software as small as possible!</lt>
+<!--lt><i>Diamond is small!</i></lt><br -->
+<lt><i>Crafting software as small as possible!</i></lt>
 </p>
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
 
 <div class="row">
-<p><br><br><br><br></p>
-<p><br><br><br><br></p>
+<p><br><br></p>
 </div>
+
+<p><br><br></p>
+</div><!-- container-fluid -->
 
 <footer>
     <div class="row">
@@ -212,8 +212,5 @@ If you can't write quality C code, that means you're not a real programmer. Most
         </div>
     </div>
 </footer>
-
-	
-</div><!-- container-fluid -->
 </body>
 </html>
