--- a/en/index.html
+++ b/en/index.html
@@ -65,7 +65,8 @@ The free small IDE for scripting languages.
 
 
 <p><br><br><br><br><br><br><br><br></p>
-
+<p><br><br></p>
+</div><!-- container-fluid -->
 
 <footer>
     <div class="row">
@@ -87,8 +88,5 @@ The free small IDE for scripting languages.
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
