--- a/en/privacy.html
+++ b/en/privacy.html
@@ -253,6 +253,7 @@ If you have any questions about this Privacy Policy, please contact us by using 
 <p><br><br></p>
 
 </div> 
+</div><!-- container-fluid --> 
 
 	
 <footer>
@@ -275,8 +276,5 @@ If you have any questions about this Privacy Policy, please contact us by using 
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
