--- a/en/service.html
+++ b/en/service.html
@@ -36,7 +36,9 @@
 <p><br><br></p>
 <p><a href="../images/SlaveryEducation.jpg" target="_blank"><img src="../images/SlaveryEducation.jpg" class="screenshots"></a><br>
 </p>
-
+<p><br><br></p>
+<p><br><br></p>
+</div><!-- container-fluid -->
 	
 <footer>
     <div class="row">
@@ -58,8 +60,5 @@
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
