--- a/en/terms.html
+++ b/en/terms.html
@@ -45,7 +45,7 @@
 <p><br><br></p>
 
 </div> 
-
+</div><!-- container-fluid -->
 	
 <footer>
     <div class="row">
@@ -67,8 +67,5 @@
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
