--- a/404.html
+++ b/404.html
@@ -38,8 +38,8 @@ The page you're looking for is no longer available.
 </p>
 
 </div> 
+</div><!-- container-fluid -->
 
-	
 <footer>
     <div class="row">
         <div class="col-md-6">
@@ -60,8 +60,5 @@ The page you're looking for is no longer available.
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
