--- a/en/about.html
+++ b/en/about.html
@@ -36,6 +36,10 @@
 <p>
 <a href="../images/computer.png" target="_blank"><img src="../images/computer.png" class="extraimg screenshots"><br>
 </p>
+
+<p><br><br></p>
+</div><!-- container-fluid -->
+
 	
 <footer>
     <div class="row">
@@ -57,8 +61,5 @@
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
