--- a/en/beak.html
+++ b/en/beak.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
 <style type="text/css">
-table, p, pre, li { max-width: 714px; }
+/* table, p, pre, li { max-width: 714px; } */
 </style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
@@ -159,7 +159,8 @@ Platform: macOS Sierra</p>
 </p>
 
 <p><br></p>
-
+<p><br><br></p>
+</div><!-- container-fluid -->
 
 <footer>
     <div class="row">
@@ -181,8 +182,5 @@ Platform: macOS Sierra</p>
         </div>
     </div>
 </footer>
-	
-	
-</div><!-- container-fluid -->
 </body>
 </html>
