--- a/en/screenshots.html
+++ b/en/screenshots.html
@@ -34,17 +34,17 @@ w {color:#ffc8c8; font-weight: bold;}
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare v1.2.344
+<i>Speare v1.2.344
 The ultra light code editor.
-(c) 2021 http://www.sevenuc.com
+(c) 2021 http://www.sevenuc.com</i>
 </pre></p>
         <h1></h1>
-        <p class="lead">
-        <a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.
+        <p class="lead"><i>
+        <a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</i>
         </p>
     </div>
 
-<p><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></p>
+<p><i><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></i></p>
 
 
 <h2>Screenshots</h2>
@@ -65,6 +65,7 @@ The ultra light code editor.
 
 
 <p><br><br><br><br></p>
+</div><!-- container-fluid -->
 
 <footer>
     <div class="row">
@@ -86,8 +87,5 @@ The ultra light code editor.
         </div>
     </div>
 </footer>
-	
-	
-</div><!-- container-fluid -->
 </body>
 </html>
