--- a/en/speare.html
+++ b/en/speare.html
@@ -29,10 +29,10 @@ w { color:#ffc8c8; font-weight: bold; }
 
     <div class="jumbotron">
         <img src="../images/speare/logo.png" style="width: 120px;" class="applogo"/>
-        <h1>Speare<br><em>version 1.2.404</em></h1>
-        <p class="greenbig">The ultra light code editor.</p>
-        <p class="lead">
-<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. It was originally developed to provide a native scripting language debugging environment that seamlessly integrated with C and C++. You can use it to edit source code files, programming and debugging. Speare designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
+        <h1><i>Speare<br><em>version 1.2.404</em></i></h1>
+        <p class="greenbig"><i>The ultra light code editor.</i></p>
+        <p class="lead"><i>
+<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. It was originally developed to provide a native scripting language debugging environment that seamlessly integrated with C and C++. You can use it to edit source code files, programming and debugging. Speare designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</i></p>
     </div>
 
 <h2 class="dark">What's new</h2>
@@ -95,7 +95,9 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 <p>If you want to edit source code files on iPad, or review code on iPad, please refer another app developed by me, <a href="powerreader.html">iCodeEditor</a>, an integrated code editor for iPad. Sorry, it's not free.</p>
 
 <h2>Code editor and IDE on macOS</h2>
-<p class="small">Emphasise small software is never too much! e.g. iTerm2 is better than Terminal.app, but it's so big! about 69MB! however Terminal.app is only 8.3MB! so I throw it away immediately! neovim bring some excitements to developers, but it's still too big! at least 25MB bare installation! so I give up it immediately! Terminal based on text editors such as GNU Emacs and Vim, although they are very cool, but their limitations are also obvious, the elephant in the room. As a programmer, so many text editor I've used in the past years, such as the bulky cargos, Visual Studio Code, Atom, Android Studio, Eclipse, ActiveState Komodo, Xcode, NetBeans, Eclipse, and some light cargos, e.g. Textadept, CotEditor and TextMate. I never like desktop applications that built with NodeJS, React and Electron, Eclipse and Java or .NET and C# based big stuffs. Speare code editor is a small and friendly code editor which implements the most important missing features in common code editors, including code completion, parallel editing, instant diff, bookmark management and fast locate code lines between multiple files, code block live parsing etc.
+<p class="small"><b>Diamond is small! Emphasise small software is never too much!</b><br>
+E.g. iTerm2 is better than Terminal.app, the latter is only 8.3MB, but the former is about 69MB! it's so big! so I throw it away immediately! neovim bring some excitements to developers, but it's still too big! bare installation is at least 25MB! and boring configurations! so I give up it immediately! I really don't know how big it will be if I configured up all languages! Although terminal based on text editors such as GNU Emacs and Vim, looks so cool, but their limitations are also obvious, the elephant in the room. As a programmer, so many text editor I've used in the past years, such as the bulky cargos, Visual Studio Code, Atom, Android Studio, Eclipse, ActiveState Komodo, Xcode, NetBeans, Eclipse, and some light cargos, e.g. Textadept, CotEditor and TextMate. TextMate is my favour many years, but I never use it anymore when Speare become to be the alternative, and I never try TextMate2 because of the same one reason, too big! I never like desktop applications that built with NodeJS, React and Electron, Eclipse and Java or .NET and C# based big stuffs. So, an extremely small code editor is the design goal of Speare to pursue, and also the design philosophy of this unique dev utility. Speare code editor was implemented extremely small but has the most important missing features in common code editors, such as code completion, parallel editing, instant diff, bookmark management, code block live parsing and efficiently tracing call routines, etc.<br>
+<!--b>Any software that has big runtime and tedious configurations should be despised as garbage!</b-->
 </p>
 
 <table><tr><td>No.</td><td> Name </td><td> Size </td> <td>No.</td><td> Name </td><td> Size </td>  </tr>
@@ -125,7 +127,7 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 <h2>Why not big software?</h2>
 <p>Waste time to maintain, wast big storage and runtime memory, waste energy, waste time to upload and download. It's waste people's life! Every desktop developer should known one thing, the embedded system developers sometime even fighting for one byte of storage in some situation. They never think about memory and storage like embedded system developers, so more and more big monster there. In today's software industry, Unix philosophy has been throw away completely!</p>
 
-<p class="green">They make software as big as possible, as complex as possible, but I believe in the opposite philosophy. </p>
+<p class="green"><i>They make software as big as possible, as complex as possible, but I believe in the opposite philosophy.</i></p>
 
 <h2>Why another code editor and IDE on macOS?</h2>
 <p>Although there are so many code editor and IDE available on macOS, but Speare code editor has its own unique characteristics:<br>
@@ -176,7 +178,7 @@ Spear enable people to run arbitrary shell commands within editor.<br>
 Spear enable people to run shell scripts within editor with hot editing.<br>
 Spear enable people to write unlimited shell extension to do anything they want.<br>
 </p>
-<p class="green">Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></p>
+<p class="green"><i>Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></i></p>
 
 
 <h2>Debug Mode</h2>
@@ -228,8 +230,8 @@ b. Configure files: Autoconf, Automake, Make, M4, Makefile, Vim, Kconfig, LdScri
 
 </p>
 
-
-<p><lt>Crafting software as small as possible!</lt></p>
+<p><!-- lt><i>Diamond is small!</i></lt><br-->
+<lt><i>Crafting software as small as possible!</i></lt></p>
 
 
 <div style="display:none;">
@@ -247,6 +249,7 @@ b. Configure files: Autoconf, Automake, Make, M4, Makefile, Vim, Kconfig, LdScri
 
 
 <p><br><br><br><br></p>
+</div><!-- container-fluid -->
 
 <footer>
     <div class="row">
@@ -268,8 +271,5 @@ b. Configure files: Autoconf, Automake, Make, M4, Makefile, Vim, Kconfig, LdScri
         </div>
     </div>
 </footer>
-	
-	
-</div><!-- container-fluid -->
 </body>
 </html>
