--- a/index.html
+++ b/index.html
@@ -26,31 +26,27 @@
 </head>
 <body>
 
-
-<div class="container-fluid">
-
-
+    
 <div class="jumbotron">
-       
 <div><pre class="green">
    ____
   / __/ __  ___ ___  ___ ___
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare version 1.2.404
+<i>Speare version 1.2.404
 The ultra light code editor.
 (c) 2021 http://www.sevenuc.com
-<small>(Release date: Jul 11 2021)</small>
+<small>(Release date: Jul 11 2021)<i></small>
 </pre></div>
 
-<h1>Speare code editor</h1>
-<p><a href="http://www.sevenuc.com/en/speare.html" target="_blank"><img src="http://www.sevenuc.com/images/speare/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;"> <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight <a href="http://www.sevenuc.com/en/debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to customise a debugging environment for a new programming language.
+<h1><i>Speare code editor<i></h1>
+<p><i><a href="http://www.sevenuc.com/en/speare.html" target="_blank"><img src="http://www.sevenuc.com/images/speare/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;"> <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight <a href="http://www.sevenuc.com/en/debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to customise a debugging environment for a new programming language.</i>
 </p>
-
 </div> <!-- jumbotron -->
 
 
+<div class="container-fluid">
 <h2>MetaLogic</h2>
 <p>
 <a href="http://www.sevenuc.com/en/metalogic.html" target="_blank"><img src="http://www.sevenuc.com/images/metalogic/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;height:160px; width:auto;">
@@ -65,7 +61,7 @@ The ultra light code editor.
 
 
 <p><br><br><br><br><br><br><br><br></p>
-
+</div><!-- container-fluid -->
 
 <footer>
     <div class="row">
@@ -87,8 +83,5 @@ The ultra light code editor.
         </div>
     </div>
 </footer>
-	
-	
-</div>
 </body>
 </html>
