--- a/en/debugger.html
+++ b/en/debugger.html
@@ -46,7 +46,7 @@ Speare version 1.2.404
     </div>
 
 <h2 class="dark">What's new</h2>
-<p><span class="dark">Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 6 and later, all kinds of Java application development. Android application, J2ME (Java ME) games, standalone Java J2SE application and game for desktops, J2EE (Java EE) server side application for all kinds of application server, such as Tomcat, Spring, Weblogic,WebSphere, JBoss (Wildfly), Glassfish, and Jetty etc. </span> <!--  →  a href="http://www.sevenuc.com/download/Small_IDE_for_Java_development.pdf" target="_blank">Small_IDE_for_Java_development.pdf</a --><br>
+<p><span class="dark">Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 6 and later, all kinds of Java application development. Android application, J2ME (Java ME) games, standalone Java J2SE application and game for desktops, J2EE (Java EE) server side application for all kinds of application server, such as Tomcat, Spring, Weblogic, WebSphere, JBoss (Wildfly), Glassfish, and Jetty etc. </span> <!--  →  a href="http://www.sevenuc.com/download/Small_IDE_for_Java_development.pdf" target="_blank">Small_IDE_for_Java_development.pdf</a --><br>
 <small> (update: Jul 11 2021)</small>
 </p>
 
@@ -137,6 +137,24 @@ You can directly switch CPython interpreter to MicroPython or your own self-comp
 <p>The Tcl debugger of Speare code editor supports all kinds of Tcl development, from embedded systems to common desktop app to web applications, you can debug Tcl code and C and C++ modules for Tcl in the same lightweight debugging environment with efficient code editing and debugging capability.
 </p>
 </div>
+
+
+<h2>Documents References</h2>
+<p><ul>
+<li><a href="http://www.sevenuc.com/download/Small_IDE_for_C_and_C++_development.pdf" target="_blank">Small_IDE_for_C_and_C++_development.pdf:</a> setup C and C++ debug environment on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/Small_IDE_for_Lua_development.pdf" target="_blank">Small_IDE_for_Lua_development.pdf:</a> setup Lua debug environment on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf" target="_blank">Small_IDE_for_Ruby_development.pdf:</a> setup mruby/c, mruby and Ruby debug environment on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/Small_IDE_for_Python_development.pdf" target="_blank">Small_IDE_for_Python_development.pdf:</a> setup Python debug environment on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/Small_IDE_for_PHP_development.pdf" target="_blank">Small_IDE_for_PHP_development.pdf:</a> setup PHP debug environment on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/Small_IDE_for_Perl_development.pdf" target="_blank">Small_IDE_for_Perl_development.pdf:</a> setup Perl debug environment on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/Small_IDE_for_Tcl_development.pdf" target="_blank">Small_IDE_for_Tcl_development.pdf:</a> setup Tcl debug environment on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/Small_IDE_for_Java_development.pdf" target="_blank">Small_IDE_for_Java_development.pdf:</a> setup Java debug environment on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/language_extension_protocol.pdf" target="_blank">language_extension_protocol.pdf:</a> setup a debug environment for a new programming language.</li>
+<li><a href="http://www.sevenuc.com/download/compile_and_install_GCC_on_macOS.pdf" target="_blank">compile and install GCC on macOS.pdf:</a> compile and install GCC on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf:</a> keyboard shortcuts of Speare code editor.</li>
+
+</ul>
+</p>
 
 <h2>About Software Industry</h2>
 <p>They obviously know a technology is garbage, a project shouldn't be started, but they don’t have enough courage to admit the mistake, correct the mistake, cancel the project and abandon that technology.
