--- a/en/speare.html
+++ b/en/speare.html
@@ -37,7 +37,7 @@ w { color:#ffc8c8; font-weight: bold; }
 
 <h2 class="dark">What's new</h2>
 <p class="dark">1. Syntax highlighting files that has no extension name by recognising it's Shebang.<br>
-2. Parallel editing mode: fast editing arbitrary files in parallel text views, most important feature.<br>
+2. Parallel editing mode: fast editing arbitrary files in parallel text views, the most important feature.<br>
 (version 1.2.404, release date: Jul 11 2021)
 </p>
 
@@ -52,10 +52,9 @@ w { color:#ffc8c8; font-weight: bold; }
 
 <p>If you can't open the link above, please launch App Store and found Speare by searching.</p>
 
-
 <h2>Features</h2>
 <p><ul>
-<li>Ultra lightweight, only ~7MB when packed up everything.</small></li>
+<li>Real ultra lightweight.</small></li>
 <li>Well designed workspace management. Intuitive and concise.</li>
 <li>High performance when managing large amount of files for big projects.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
@@ -77,13 +76,14 @@ w { color:#ffc8c8; font-weight: bold; }
 <li>Preview all kinds of files, image, SVG, PDF, office documents, audio and video etc.</li>
 </ul></p>
 
+
 <h2>Screenshot</h2>
 <p><a href="../images/speare/debug_sqlite_with_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_sqlite_with_speare_code_editor.png" class="screenshots"/></a><br><br>
 Screenshot of <a href="https://sqlite.org/" target="_blank">SQLite</a> source code "Parallel Editing" in Speare code editor, "Parallel Editing" mode allows user stick one file in the bottom view and switch different files in the top view.<br><br>
 
 Using .diff files with the help of "Parallel Editing" mode has obvious advantage, copy code blocks in the bottom text view and fast switch different files in the top text view can efficiently edit files very fast, and Speare can index .diff files for big file changes very well comparing to other code editor and IDEs. And, Spear enable user edit arbitrary two souce code file side by side and also support edit source code file with built-in web browser side by side.
 </p>
-<p>more screenshots: <a href="screenshots.html" target="_blank">screenshot references</a>.</p>
+<p>more screenshots:  →  <a href="screenshots.html" target="_blank">screenshot references</a>.</p>
 
 <h2>Fast edit several files separately</h2>
 <p>Just drag the file one by one from Finder and drop into workspace, edit them and then right-click to "Remove All".</p>
@@ -130,11 +130,11 @@ E.g. iTerm2 is better than Terminal.app, the latter is only 8.3MB, but the forme
 <p class="green"><i>They make software as big as possible, as complex as possible, but I believe in the opposite philosophy.</i></p>
 
 <h2>Why another code editor and IDE on macOS?</h2>
-<p>Although there are so many code editor and IDE available on macOS, but Speare code editor has its own unique characteristics:<br>
-<ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 1.1MB! </li>
+<p>Despite there are so many code editor and IDE available on macOS, but Speare code editor has its own unique characteristics:<br>
+<ul><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light!</li>
 <li><lt>High Performance.</lt> Code editor developed with Javascript or Java have inherent defects that can't keep high performance when handle thousands of files for big project, such as VSCode, Atom, and NetBeans, Eclipse. Speare code editor can handle very big project, for very big C &amp; C++ projects, Java projects, Node projects, and very big game projects! Easily!</li>
 <li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. But Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
-</li></ol></p>
+</li></ul></p>
 
 
 <div style="display:none;">
@@ -149,17 +149,15 @@ E.g. iTerm2 is better than Terminal.app, the latter is only 8.3MB, but the forme
 <p>Speare code editor helps end user to understand an existing code base by powerful code browser and call routines tracing functions. Speare code editor parses source code files and maintains the database of symbol definitions instantly while user editing, and presents useful contextual information to user automatically. It also use persistent bookmarks to remember key locations within functions or classes and their references. End user can quickly navigate function calls and callers and find references to variable, function or class instantly.</p>
 
 <h2>Productive helps to fast find editing points</h2>
-<p>
-1. Use "Recent List" to fast find recent opened and edited files.<br>
-2. Use "Functions" to fast find the location of function definitions.<br>
-3. Use "Bookmarks" to fast find the bookmarks placed for editing locations.<br>
-4. Search symbol references and fast find the location of the reference points.<br>
-5. Use "Parallel Editing" to fast edit files.<br>
-6. Drag file or folder in the workspace to re-arrange their positions.<br>
-7. Search items in the workspace.<br>
-8. Use "Jump To Definition" to find the reference points, and click "Go Back" to return to jump point.<br>
-9. Use "Changes" to fast find file changes.
-</p>
+<p><ul><li> Use "Recent List" to fast find recent opened and edited files.</li>
+<li> Use "Functions" to fast find the location of function definitions.</li>
+<li> Use "Bookmarks" to fast find the bookmarks placed for editing locations.</li>
+<li> Search symbol references and fast find the location of the reference points.</li>
+<li> Use "Parallel Editing" to fast edit files.</li>
+<li> Drag file or folder in the workspace to re-arrange their positions.</li>
+<li> Search items in the workspace.</li>
+<li> Use "Jump To Definition" to find the reference points, and click "Go Back" to return to jump point.</li>
+<li> Use "Changes" to fast find file changes.</li></ul></p>
 
 
 <h2>Fast Editing</h2>
@@ -167,7 +165,7 @@ E.g. iTerm2 is better than Terminal.app, the latter is only 8.3MB, but the forme
 </p>
 
 <h2>Speare Keyboard Shortcuts</h2>
-<p>Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf</a>
+<p>Please refer the table:  →  <a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf</a>
 </p>
 
 <h2>Syntax Checking and Run Code Instantly</h2>
