--- a/en/taihaa.html
+++ b/en/taihaa.html
@@ -31,9 +31,10 @@
         <p class="lead">
 <b>Taihaa</b> is a high precision fate bone weight calculator, high precision fate analysis engine, high accuracy fate telling app, a serious app developed just for fun.</p>
     </div>
-    
+
 <h2>Why</h2>
 <p>There're so many online fate telling site, but they are not rigorous, serious! Incorrect accurate birth date time calculation leads to incorrect big luck years calculation. The calculation basis is wrong, all of these conclusions are wrong, just used to fooling people.</p>
+<p><br></p>
 
 <h2>How the conclusions in the fate analysis report calculated?</h2>
 <p>
@@ -42,17 +43,9 @@
 3. Calculate big lucky years based on high accurate date time values.<br><br>
 </p>
 
-
-<h2>Intellectual Property Transfer</h2>
-<p>Taihaa has a built-in fate analysis engine that can be developed as commercial fate telling device. This solution is specially designed for embedded system and it can be developed as standalone machine or handheld device. The engine is completely developed with ANSI C that has a very small size and includes a fate analysis engine with an extra PDF document printing engine. The business prospects of this system are very broad, and the economic benefits are huge. The device is suitable to be installed in various entertainment places. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report. If you are interested in using the source code of the engine to develop commercial product, please contact us for more details.
-</p>
-
-<p><a href="https://itunes.apple.com/us/app/taihaa/id1457696997?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found Taihaa by searching.</p>
-
-
 <h2>Screenshots</h2>
-<div class="screenshots">
+<p><a href="../images/Taihaa/screenshot1.png" target="_blank"><img src="../images/Taihaa/screenshot1.png" class="screenshots"/></a></p>
+<!--div class="screenshots">
 <div class="row">
    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -81,9 +74,17 @@
   </a>
   </div>
 </div>
-</div>
+</div-->
+<h2>Intellectual Property Transfer</h2>
+<p>Taihaa has a built-in fate analysis engine that can be developed as commercial fate telling device. This solution is specially designed for embedded system and it can be developed as standalone machine or handheld device. The engine is completely developed with ANSI C that has a very small size and includes a fate analysis engine with an extra PDF document printing engine. The business prospects of this system are very broad, and the economic benefits are huge. The device is suitable to be installed in various entertainment places. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report. If you are interested in using the source code of the engine to develop commercial product, please contact us for more details.<br><br>
+<!--a href="../images/Taihaa/fate-machine.png" target="_blank"><img src="../images/Taihaa/fate-machine.png" class="screenshots"/></a><br-->
+<!--i>The sketch model of the supposed fate analysis machine.</i-->
+</p>
 
+<p><a href="https://itunes.apple.com/us/app/taihaa/id1457696997?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
+<p>If you can't open the link above, please launch App Store and found Taihaa by searching.</p>
 <p><br><br></p>
+
 <h2>References</h2>
 <p><a href="tungsyu.html">Tungsyu</a>, the Calendar of Yangtze River.</p>
 
