--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -59,7 +59,9 @@ CCReviewer is a powerful chess analyser, move recorder and game records player. 
 
 <h2>Screenshots</h2>
 <p><a href="../images/ccreviewer/1.png" target="_blank"><img src="../images/ccreviewer/1.png" class="screenshots"/></a></p>
-<p><a href="../images/ccreviewer/1.png" target="_blank"><img src="../images/ccreviewer/2.png" class="screenshots"/></a></p>
+<p><a href="../images/ccreviewer/1.png" target="_blank"><img src="../images/ccreviewer/2.png" class="screenshots"/></a><br>
+Sample colour: user can setup any colour for chess pieces.
+</p>
 <p><br><br></p>
 
 
