--- a/en/debugger.html
+++ b/en/debugger.html
@@ -151,6 +151,7 @@ You can directly switch CPython interpreter to MicroPython or your own self-comp
 <li><a href="http://www.sevenuc.com/download/Small_IDE_for_Java_development.pdf" target="_blank">Small_IDE_for_Java_development.pdf:</a> setup Java debug environment on macOS.</li>
 <li><a href="http://www.sevenuc.com/download/language_extension_protocol.pdf" target="_blank">language_extension_protocol.pdf:</a> setup a debug environment for a new programming language.</li>
 <li><a href="http://www.sevenuc.com/download/compile_and_install_GCC_on_macOS.pdf" target="_blank">compile and install GCC on macOS.pdf:</a> compile and install GCC on macOS.</li>
+<li><a href="http://www.sevenuc.com/download/Speare-a free small IDE for scripting languages.pdf" target="_blank">Speare-a free small IDE for scripting languages.pdf:</a> old introduction document.</li>
 <li><a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf:</a> keyboard shortcuts of Speare code editor.</li>
 
 </ul>
@@ -161,13 +162,14 @@ You can directly switch CPython interpreter to MicroPython or your own self-comp
 On the contrary, they not only want to recover their cost, they even drag customers into big mud puddle and even promote their big lies to make money.
 </p>
 
+
 <h2>About Programming Languages</h2>
 <p>I have used various popular programming languages from DOS era, for small, reliable and strong software:<br><br>
 <span class="green">C is the only choice.</span><br><br>
-C can make strongest software by programmer crafting with patient and willpower. C is far from a perfect language and it really has many flaws, C++ has more, but no replacement. I've tried Nim in its early stage, it's a good idea but the final result is unacceptable, the result turned out to be an interesting but failed attempt, because it produced a lot of garbage when automatically generating C code, that's very annoying, so I throw it away immediately. And I've tried Wren, a small scripting language, sorry, it really can't compare to Lua, so I have to give it up. Haskell is good at programming language parsing, code generating, concurrency and functional programming, concise and grace, but its runtime made it heavy and burdensome, plenty of other programming languages have the same inherent problem too. In short, big runtime is unacceptable, including C++. From my programming experience, Java have more stronger OOP ability than C++, and Objective-C have more stronger OOP ability than Java, Ruby has the extreamly OOP flexbilty in all of them, but there isn't a perfect programming language in the world can help you make a good software without, without long term programming experience. Despite Rust, Go, OC and Swift try to resolve existing issues in C and C++ programming language, but none of them can replace the importance of C and C++. <i>Master C programming language and make small software is a real programmer's cultivation.</i>
-
+C can make strongest software by programmer crafting with patient and willpower. C is far from a perfect language and it really has many flaws, C++ has more, but no replacement. I've tried Nim in its early stage, it's a good idea but the final result is unacceptable, the result turned out to be an interesting but failed attempt, because it produced a lot of garbage when automatically generating C code, that's very annoying, so I throw it away immediately. And I've tried Wren, a small scripting language, sorry, it really can't compare to Lua, so I have to give it up. Haskell is good at programming language parsing, code generating, concurrency and functional programming, concise and grace, but its runtime made it heavy and burdensome, plenty of other programming languages have the same inherent problem too, big runtime with huge boring dependencies. In short, big runtime is unacceptable, such as C++, huge dependencies is unacceptable, such as Java and Node. From my programming experience, Java have more stronger OOP ability than C++, and Objective-C have more stronger OOP ability than Java, Ruby has the extreamly OOP flexbilty in all of them, but there isn't a perfect programming language in the world can help you make a good software without, without long term programming experience. Despite Rust, Go, OC and Swift try to resolve existing issues in C and C++ programming language, but none of them can replace the importance of C and C++. <i>Master C programming language and make small software is a real programmer's cultivation.</i>
 <span class="green"> → <a href="speare.html#whysmallsoftware" target="_blank">Why small software.</a></span>
 </p>
+
 
 <a name="whyc"></a><br>
 <h2>About the C programming language</h2>
