--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -55,9 +55,9 @@
 
 <h2>Screenshot</h2>
 <p>
-<a href="../images/littlefox/4.png" target="_blank"><img src="../images/littlefox/4.png" class="screenshots"/></a><br><br>
-<a href="../images/littlefox/1.png" target="_blank"><img src="../images/littlefox/1.png" class="screenshots"/></a><br><br>
-<a href="../images/littlefox/2.png" target="_blank"><img src="../images/littlefox/2.png" class="screenshots"/></a><br>
+<a href="../images/littlefox/4.png" target="_blank"><img src="../images/littlefox/4.png" class="screenshots" /></a><br><br>
+<a href="../images/littlefox/1.png" target="_blank"><img src="../images/littlefox/1.png" class="screenshots" style="max-width: 640px;" /></a><br><br>
+<a href="../images/littlefox/2.png" target="_blank"><img src="../images/littlefox/2.png" class="screenshots" style="max-width: 640px;"/></a><br>
 </p>
 
 
