--- a/en/tungsyu.html
+++ b/en/tungsyu.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<div class="container-fluid">
+<div class="container-fluid" style="max-width:751px;">
 
     <div class="jumbotron">
         <p><img src="../images/Tungsyu/logo.png" style="width: 120px;" /></p>
@@ -30,10 +30,10 @@
         <p class="greenbig">Tungsyu, the Calendar of Yangtze River.</p>
     </div>
 
-<p>Tungsyu was developed with an ultra small lunar calendar engine especially designed for deeply embedded systems, it's only 72KB binary without any extra data and dependencies except C standard library. It was completely developed with ANSI C from scratch and can be compiled with C89 or C99. The engine is a full range calendar (means thousands of years) that can fast calulate julian calendar and gregorian calendar to lunar calendar or vice versa. It can be used in microprocessor based on embedded system and desktop apps. Please contact us if you want to use it in your product. The following is a screenshot of the engine.</p>
+<p>Tungsyu was developed with an ultra small lunar calendar engine especially designed for deeply embedded systems, it's only 72KB binary without any extra data and dependencies except C standard library. It was completely developed with ANSI C from scratch and can be compiled with C89 or C99. The engine is a full range calendar (means thousands of years) that can fast calulate julian calendar and gregorian calendar to lunar calendar or vice versa. It can be used in microprocessor based on embedded system and desktop apps. Please contact me if you're interested in to use it in your product. The following is a screenshot of the engine.</p>
 <p><!--img src="../images/Tungsyu/lunar_calendar.png" class="screenshots"/-->
 <pre class="block">
- % ./calendar
+ % ./calendar 202104
 2021年 觜火猴(土)  肖牛    辛丑    四月 心月狐(土)
  1 星期四 木曜日 井木犴 閉日 牧羊座 2021年二月二十 辛卯月己卯日
  2 星期五 金曜日 鬼金羊 建日 牧羊座 2021年二月廿一 辛卯月庚辰日
@@ -65,7 +65,9 @@
 28 星期三 水曜日 參水猿 除日 金牛座 2021年三月十七 壬辰月丙午日
 29 星期四 木曜日 井木犴 滿日 金牛座 2021年三月十八 壬辰月丁未日
 30 星期五 金曜日 鬼金羊 平日 金牛座 2021年三月十九 壬辰月戊申日
-</pre></p>
+</pre>
+Example: command line data querying for one month of a year.<br><br>
+</p>
 
 
 <p><a href="https://itunes.apple.com/us/app/tungsyu/id1457444475?mt=12" target="_blank" class="appstore_download_link" ><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br>
@@ -77,7 +79,7 @@ The map of Yangtze River.
 
 <h2>Screenshots</h2>
 <p>
-<a href="../images/Tungsyu/0422.png" target="_blank"><img src="../images/Tungsyu/0422.png" class="screenshots"></a><br>
+<a href="../images/Tungsyu/0422.png" target="_blank"><img src="../images/Tungsyu/0422.png" class="screenshots" style="max-width:751px;"></a><br>
 </p>
 
 <p><br><br></p>
